<resources>
    <string name="app_name">Cover Your Apps</string>

    <string name="facebook_app_id">956299844832088</string>
    <string name="fb_login_protocol_scheme">fb956299844832088</string>


    <string name="profile_button_description">Open Profile Menu</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="agreements_navigation">Agreements</string>
    <string name="cash_transactions_navigation">Cash Transactions</string>
    <string name="lending_navigation">Lend an Item</string>

    <!--Profile Menu-->
    <string name="default_name">Default Name</string>
    <string name="default_display_name">\@default-displayname</string>
    <string name="profile_information">Profile Information</string>
    <string name="profile_home">Home</string>
    <string name="profile_friends">Friends</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_about">About</string>

    <!--New agreement button and menu-->
    <string name="floating_button_content_description">Agreement Selection</string>
    <string name="agreement_lend_an_item">Lend an Item</string>
    <string name="agreement_cash_transaction">Cash Transaction</string>
    <string name="agreement_new_agreement">New Agreement</string>

    <!--Sign in menu-->
    <string name="sign_in">Sign in</string>
    <string name="age_error">Must be at least 13 years old</string>
    <string name="enter_your_birthdate">Enter Your Birthdate</string>
    <string name="terms_of_submit">By pressing \"Submit\" you agree to the terms of service and privacy policy</string>
    <string name="submit">Submit</string>
    <string name="or">Or</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="name_hint">First and Last Name</string>
    <string name="next">Next</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="email_hint">Enter Your Email</string>
    <string name="password_hint">Enter Your Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="name_not_entered">Please enter your name</string>
    <string name="email_not_entered">Please enter your email</string>
    <string name="password_not_entered">Please enter your password</string>
    <string name="password_too_short">Please include at least 8 characters</string>
    <string name="email_not_valid">Please enter a valid email</string>
    <string name="name_not_valid">Please enter your first and last name</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="email_sign_in">Email</string>

    <!--Home Fragment-->
    <string name="pending">Pending (0)</string>
    <string name="cover_logo">Cover Logo</string>
    <string name="cover_type_default_text">Cover type default text</string>
    <string name="status_default_text">Status default text</string>
    <string name="cover_dropdown_arrow">Cover Dropdown Arrow</string>
    <string name="cover_sent_title_default_text">Cover sent title default text</string>
    <string name="cover_people_default_text">Cover people default text</string>
    <string name="cancel">Cancel</string>
    <string name="review">Review</string>
    <string name="remind">Remind</string>
    <string name="confirmed">Confirmed (0)</string>
    <string name="expired">Expired (0)</string>
    <string name="clear">Clear</string>
    <string name="sent_to">Sent to:</string>
    <string name="received_from">Received From:</string>

    <!--Cover Creator-->
    <string name="add_people">Add People</string>
    <string name="choose_contract">Choose Contract</string>
    <string name="search_by_username_hint">Search by Username</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="your_friends">Your Friends</string>
    <string name="friend_name_default_text">Friend name default text</string>
    <string name="friend_display_name_default_text">Friend Display Name Default Text</string>
    <string name="friend_add_button">Friend Add Button</string>
    <string name="selected_recipients">Selected Recipients:</string>
    <string name="write_your_own_contract">Write Your Own</string>
    <string name="search_templates_hint">Search Templates</string>
    <string name="contract_title_default_text">Contract title default text</string>
    <string name="select">Select</string>
    <string name="cover_type_contract">Contract</string>
    <string name="contract_template_overview_title_default_text">Contract Template Overview Title Default Text</string>
    <string name="continue_text">Continue</string>
    <string name="contract_template_argument_default_title">Contract Template Default Title</string>
    <string name="argument_default_name">Argument Default Name</string>
    <string name="electronic_signature">Electronic Signature:</string>
    <string name="write_a_contract">Write A Contract</string>
    <string name="what_would_you_like_your_contract_to_say">What would you like your contract to say?</string>
    <string name="content">Content:</string>
    <string name="title">Title:</string>
    <string name="contract_title">Contract title</string>
    <string name="contract_review_default_title">Contract Review Default Title</string>
    <string name="contract_review_default_text">Contract review default text</string>
    <string name="back">Back</string>
    <string name="deny">Deny</string>
    <string name="accept">Accept</string>
    <string name="cash_transaction">Cash Transaction</string>
    <string name="cash_amount">Cash Amount</string>
    <string name="memo">Memo</string>
    <string name="what_would_you_like_the_memo_to_be">What would you like the memo to be?</string>
    <string name="cash_review_default_text">Cash Review Default Text</string>
    <string name="cash_review_body_default_text">Cash Review Body Default Text</string>
    <string name="you_don_t_have_any_friends">You don\'t have any friends</string>
    <string name="no_contract_templates_available">No contract templates available</string>
    <string name="no_pending_covers">No pending covers</string>
    <string name="no_confirmed_covers">No confirmed covers</string>
    <string name="no_expired_covers">No expired covers</string>
    <string name="add_friends_by_username">Add friends by username</string>
    <string name="item_name">Item Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image">Upload Image</string>
    <string name="return_date">Return Date</string>
    <string name="lend_an_item">Lend an Item</string>
    <string name="lending_default_title">Lending Default Title</string>
    <string name="lending_default_text">Lending Default Text</string>
    <string name="there_is_no_account_registered_with_this_email_address">There is no account registered with this email address</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="create_instructions">If you don\'t have an account, click a button below and one will be made for you.</string>
    <string name="sign_up_quit_early">It appears as if you quit the app before you finished creating an account. Enter your birthday above to create your account, or sign out and start over.</string>
    <string name="sign_out">Sign Out</string>
    <string name="auto_add_friends">Auto-Add Friends</string>
    <string name="when_checked_friends_will_be_automatically_added_to_your_friends_list_after_you_send_them_a_cover">When checked, friends will be automatically added to your friends list after you send them a cover</string>
    <string name="search_someone">Search for someone</string>
    <string name="search_results">Search Results</string>
    <string name="no_search_results_found">No search results found</string>


</resources>