<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single"><!-- Can only pick one item in menu -->
        <item android:id="@+id/profile_home"
            android:icon="@drawable/home_icon"
            android:title="@string/profile_home"/>
        <item android:id="@+id/profile_friends"
            android:icon="@drawable/friends_icon"
            android:title="@string/profile_friends"/>
        <item android:id="@+id/profile_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/profile_settings"/>
        <item android:id="@+id/profile_about"
            android:icon="@drawable/profile"
            android:title="@string/profile_about"/>
    </group>

</menu>