<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="75dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/nameNotEnteredErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/name_not_entered"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/nameNotValidErrorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:text="@string/name_not_valid"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_your_name"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />


    <Button
        android:id="@+id/nameNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingHorizontal="55dp"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>