<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="75dp"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_your_birthdate"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/terms_of_submit"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_blue_dark"
        android:paddingHorizontal="55dp"
        android:text="@string/submit"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/signUpQuitEarlyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/sign_up_quit_early"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/signUpQuitEarlyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        android:paddingHorizontal="55dp"
        android:text="@string/sign_out"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:visibility="gone"/>

</LinearLayout>