<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:background="@drawable/cover_list_item_shape"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_weight="5"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/coverLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/cover_logo"
                android:src="@mipmap/ic_launcher_round" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coverTypeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/cover_type_default_text"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/coverTimeAgoTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/status_default_text"
                    android:textSize="16sp"
                    android:textStyle="italic" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/coverDropdownButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cover_dropdown_arrow"
                android:padding="15dp"
                android:src="@drawable/cover_dropdown_arrow" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/coverHideableContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/coverSentTitleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/cover_sent_title_default_text"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/coverPeopleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/cover_people_default_text"
                android:textColor="@android:color/black"
                android:textSize="14sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/coverCancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/close_icon"
                android:text="@string/cancel" />

            <View
                android:id="@+id/coverCancelSeparator"
                android:layout_width="0.6dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/coverReviewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/review_icon"
                android:text="@string/review" />

            <View
                android:id="@+id/coverRemindSeparator"
                android:layout_width="0.6dp"
                android:layout_height="match_parent"
                android:background="@android:color/black" />

            <Button
                android:id="@+id/coverRemindButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@android:color/transparent"
                android:drawableTop="@drawable/remind_icon"
                android:text="@string/remind" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>