<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ChooseRecipientsFragment">

    <EditText
        android:id="@+id/usernameSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@android:color/transparent"
        android:hint="@string/search_by_username_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="12dp"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/selectedRecipientsInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:id="@+id/selectedRecipientsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="4dp"
            android:text="@string/selected_recipients"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/selectedRecipientsClearButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/yourFriendsBackground"
                android:text="@string/clear"
                android:textAllCaps="false"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.6dp"
        android:background="@android:color/black" />


    <Button
        android:id="@+id/inviteFriendsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/fab_plus"
        android:drawablePadding="14dp"
        android:gravity="start|center"
        android:paddingVertical="8dp"
        android:text="@string/invite_friends"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yourFriendsBackground"
        android:paddingHorizontal="12dp"
        android:paddingVertical="4dp"
        android:text="@string/your_friends"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/noFriendsTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:paddingTop="30dp"
        android:text="@string/you_don_t_have_any_friends"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/yourFriendsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollIndicators="none" />


</LinearLayout>